--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 /test/version_tmp/
 /tmp/
 
+# unicorn
+*unicorn.*.log
+*unicorn.pid
+
 # Used by dotenv library to load environment variables.
 # .env
 
