--- a/service_unicorn/Gemfile
+++ b/service_unicorn/Gemfile
@@ -2,9 +2,8 @@
 
 source 'https://rubygems.org'
 
-gem 'faraday'
-gem 'puma'
-gem 'puma-metrics'
-gem 'sinatra'
-gem 'sinatra-contrib'
-gem 'json'
+gem "pry"
+gem "unicorn"
+gem "sinatra"
+gem "faraday"
+gem "cancellation", "0.0.9", github: "nickfloyd/cancellation", branch: "main" 
